add mysqlquery and mysqlupdate

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,9 @@
 [logsend]
 address   = localhost
 ; port      = 514
+
+[database]
+host   = localhost
+user   = exampleuser
+password    = examplepassword
+database    = exampleuser
